updated wrapping issued on main titles

--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -11,11 +11,6 @@ abbr[title]{
     text-decoration: none;
 }
 
-@mixin word-wrap() {
-  overflow-wrap: break-word; word-wrap: break-word; -ms-word-break: break-all; word-break: break-all;
-  word-break: break-word; -ms-hyphens: auto; -moz-hyphens: auto; -webkit-hyphens: auto; hyphens: auto;
-}
-
 .opss-float-right,
 .opss-text-align-right {
     @include govuk-media-query($from: tablet) {
